--- a/starter/udagram.yml
+++ b/starter/udagram.yml
@@ -35,18 +35,18 @@ Resources:
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Allow HTTP to our hosts and SSH from local only
+      GroupDescription: Allow HTTP from Load Balancer and SSH from Load Balancer only
       VpcId:
         Fn::ImportValue: !Sub "${EnvironmentName}-VPCID"
-      SecurityGroupIngress: # Allowing inbound traffic on port 80 for accessing application and on port 22 for SSH in case of troubleshooting any issues.
+      SecurityGroupIngress: # Allowing inbound traffic on port 80 from Load Balancer and port 22 from Load Balancer
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-          CidrIp: 0.0.0.0/0
+          SourceSecurityGroupId: !Ref LBSecurityGroup
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: 0.0.0.0/0
+          SourceSecurityGroupId: !Ref LBSecurityGroup
       SecurityGroupEgress: # Allowing outbound traffic on all ports so that updates or patches can be downloaded.
         - IpProtocol: tcp
           FromPort: 0
@@ -91,29 +91,31 @@ Resources:
       Roles:
         - Ref: S3BucketsRole
 
-  ## Launch Configuration ##
-  # Launch configuration that will be used when server will spin up
-  WebAppLaunchConfig:
-    Type: AWS::AutoScaling::LaunchConfiguration
+  ## Launch Template ##
+  # Launch template that will be used when server will spin up
+  WebAppLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash
-          apt-get update -y
-          apt-get install unzip awscli -y
-          apt-get install apache2 -y
-          systemctl start apache2.service
-          cd /var/www/html
-          aws s3 cp s3://udagram-webapp/index.html .
-      ImageId: !Ref ServerAMIId
-      IamInstanceProfile: !Ref S3BucketsInstanceProfile
-      SecurityGroups:
-        - Ref: WebServerSecurityGroup
-      InstanceType: !Ref InstanceType
-      BlockDeviceMappings:
-        - DeviceName: "/dev/sdk"
-          Ebs:
-            VolumeSize: "10"
+      LaunchTemplateData:
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash
+            apt-get update -y
+            apt-get install unzip awscli -y
+            apt-get install apache2 -y
+            systemctl start apache2.service
+            cd /var/www/html
+            aws s3 cp s3://udagram-webapp/index.html .
+        ImageId: !Ref ServerAMIId
+        IamInstanceProfile:
+          Name: !Ref S3BucketsInstanceProfile
+        SecurityGroupIds:
+          - Ref: WebServerSecurityGroup
+        InstanceType: !Ref InstanceType
+        BlockDeviceMappings:
+          - DeviceName: "/dev/sdk"
+            Ebs:
+              VolumeSize: "10"
 
   ## Auto Scaling Group ##
   # Auto scaling group for Udagram App
@@ -122,8 +124,9 @@ Resources:
     Properties:
       VPCZoneIdentifier:
         - Fn::ImportValue: !Sub "${EnvironmentName}-PRI-NETS"
-      LaunchConfigurationName:
-        Ref: WebAppLaunchConfig
+      LaunchTemplate:
+        LaunchTemplateId: !Ref WebAppLaunchTemplate
+        Version: !GetAtt WebAppLaunchTemplate.LatestVersionNumber
       MinSize: "4"
       MaxSize: "4"
       TargetGroupARNs:
